# Loquat

./: Cargo.toml  IMPROVEMENTS_SUMMARY.md  README.md  errors.txt  start.bat
.github/: copilot-instructions.md
config/: default.toml  dev.toml  prod.toml  test.toml
dev-tools/: check.bat  clean.bat  rebuild.bat
examples/: basic_usage.rs
plugins/12/: Cargo.toml  README.md  config.json
plugins/12/src/: lib.rs
src/: lib.rs  main.rs
src/adapters/: config.rs  console_adapter.rs  console_factory.rs  converter.rs  echo_adapter.rs  echo_factory.rs  factory.rs  manager.rs  mod.rs  state_manager.rs  status.rs  traits.rs  types.rs
src/aop/: mod.rs  proxy.rs  traits.rs
src/channel_manager/: manager.rs  mod.rs  traits.rs  types.rs
src/channels/: channel.rs  mod.rs  types.rs
src/cli/: mod.rs  plugin_generator.rs
src/config/: loquat_config.rs  mod.rs
src/engine/: engine.rs  mod.rs  traits.rs  types.rs
src/errors/: mod.rs  types.rs
src/events/: block.rs  event_enum.rs  group.rs  message.rs  meta.rs  mod.rs  notice.rs  package.rs  request.rs  target_site.rs  traits.rs
src/logging/: logger.rs  mod.rs  traits.rs
src/plugins/: loader.rs  manager.rs  mod.rs  plugin_manager.rs  registry.rs  traits.rs  types.rs
src/pools/: mod.rs  standard_pool.rs  traits.rs  types.rs  validator.rs
src/routers/: mod.rs  router.rs  traits.rs  types.rs
src/shutdown/: coordinator.rs  mod.rs  stages.rs
src/streams/: mod.rs  processor.rs  standard_stream.rs  traits.rs
src/utils/: error_handling.rs  hot_reload_history.rs  lru_cache.rs  mod.rs
src/web/: handlers.rs  mod.rs  (+2 more)
(+14 files in other folders)
