[package]
name = "12"
version = "0.1.0"
edition = "2021"

[lib]
name = "12"
crate-type = ["cdylib"]

[dependencies]
loquat = "{ version = \"0.1.0\", path = \"../..\" }"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
